# Banca

./: CMakeLists.txt  ContoCorrente.cpp  ContoCorrente.h  Interagisci.cpp  Interagisci.h  SaldoObserver.cpp  SaldoObserver.h  Transazione.cpp  Transazione.h  main.cpp  observer.cpp  observer.h
